# hermes-skills-pack

./: README.md  SBOM.json  pyproject.toml
skills/chatgpt-plus-image2-carousel-studio/: SKILL.md
skills/chatgpt-plus-image2-carousel-studio/references/: 2026-05-19-4x5-all-hardening.md  2026-05-19-4x5-sales-carousel-standard.md  camofox-background-and-first-slide.md  camofox-tab-creation-sessionkey.md  chatgpt-image-download-workflow.md  chatgpt-plus-ui-map-2026-05.md  dimension-check-at-download-time.md  final-clean-export.md  provider-lock-contract.md  sequential-slide-protocol.md  story-9x16-image2-workflow.md  visual-qa-rubric.md
skills/chatgpt-plus-image2-carousel-studio/scripts/: qa_prompt_pack_lint.py  validate_final_clean_bundle.py  validate_image2_carousel_contract.py  validate_local_image_exports.py  validate_no_paid_api_fallback.py  validate_slide_ledger.py
skills/chatgpt-plus-image2-carousel-studio/templates/: carousel-run-contract.yaml  slide-ledger.yaml
skills/chatgpt-plus-instagram-content-studio/: SKILL.md
skills/chatgpt-plus-instagram-content-studio/references/: 2026-05-18-image2-sequential-qa-recovery.md  2026-05-18_chatgpt-images2-refrimix-playbook.md  2026-05-18_chatgpt-signed-image-download.md  (+5 more)
skills/chatgpt-plus-persistent-workbench/: SKILL.md
skills/crm-refrimix-v2-execution/: SKILL.md
skills/instagram-refrimix/: SKILL.md
skills/pdf-proposta-refrimix/: SKILL.md
skills/refrimix-master-creator/: SKILL.md
skills/skills-pack/: SKILL.md
src/hermes_skills_pack/: __init__.py  config.py  plugin.py
tests/: test_smoke.py
(+24 files in other folders)
